@@ -4,7 +4,7 @@ name = DateTime-US
 
 [ReadmeFromPod]
 enable = true
-filename = docs/README.pod
+filename = docs/README.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
