@@ -1,6 +1,10 @@
 Revision history for DateTime-US
 
 {{$NEXT}}
+    - Allow user to enter D instead of S, e.g., CDT or CST
+      (the effect is the same internally)
+    - Add tests for use of D instead of S
+    - Upgrade workflow checkout to @v3
 
 0.0.4  2021-12-06T09:18:56-06:00
     - Publish to the Raku module Zef repository
